[package]
name = "iota-api"
version = "0.1.0"
authors = ["Lewis Daly <lewisdaly@me.com>"]

[dependencies]
clap = {version = "2.26.0", features = ["yaml"]}
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rpassword = "1.0.0"
reqwest = {git = "https://github.com/seanmonstar/reqwest" }

iota-curl = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70" }
iota-curl-cpu = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70" }
iota-sign = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70" }
iota-models = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70" }
iota-trytes = { git = "https://github.com/iotaledger/iota.rs", rev = "2be8c70", features = ["alloc"] }
